--- a/views/comment.ejs
+++ b/views/comment.ejs
@@ -4,20 +4,27 @@
 			<div class="comment-list">
 				<% for (var i = 0; i < posts._doc.comments.length; i++) { %>
 					<div class="comment">
-						<div class="sixteen wide column">
-							<div class="ui header">
-								<h4 class="ui left aligned header">
-									<%= posts._doc.comments[i].contents %>
-								</h4>
-								<h6 class="ui right aligned orange header" style="font-size: small;">
-									작성자 : <%= writer[i] %>
-								</h6>
-								<h6 class="ui right aligned orange header" style="font-size: x-small;">
-									작성 시간 : <%= created[i] %>
-								</h6>
+						<h6 class="commentContents" style="font-size: small;">
+							<%= writer[i] %>
+						</h6>
+						<h4 class="commentContents">
+							<%= posts._doc.comments[i].contents %>
+						</h4>
+						<h6 class="commentContents" style="font-size: x-small;">
+							<%= created[i] %>
+						</h6>
+						<div class="btn-group dropleft">
+							<button type="button" class="btn btn-outline-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+							⋮
+							</button>
+							<div class="dropdown-menu">
+								<button class="dropdown-item editComment" type="button" value='<%= posts._doc.comments[i]._id %>'>edit</button>
+								<button class="dropdown-item deleteComment" type="button"
+										onclick='delComment();' value='<%= posts._doc.comments[i]._id %>'>delete</button>
 							</div>
 						</div>
 					</div>
+					
 				<% } %>
 			</div>
 			<br>
