--- a/views/home.ejs
+++ b/views/home.ejs
@@ -36,7 +36,7 @@
 			  </div>
 			</div>
 			<div class="carousel-item">
-			  <img src="/public/images/carousel2.jpg" class="d-block w-100" alt="...">
+			  <img src="/public/images/carousel2.jpg" class="d-block w-100" alt="..." style='height: 484.38px;'>
 			  <div class="carousel-caption d-none d-md-block">
 				<h5>Third slide label</h5>
 				<p>Some representative placeholder content for the third slide.</p>
