--- a/views/showpost.ejs
+++ b/views/showpost.ejs
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 	<link rel="stylesheet" href="/public/css/chat.css"/>
+	<link rel="stylesheet" href="/public/css/comment.css"/>
     <title>글 조회</title>
   </head>
   <body>
@@ -16,6 +17,7 @@
 
 	<div class="container" id='showpostid'>
 		<h4 class="container mt-4"><strong id='title'><%= posts._doc.title %></strong></h4>
+		<input type='hidden' id='hiddenPostId' value='<%= posts._id %>'>
 		<div class="float-right">
 		<% if(login_success && posts.writer.name == user.name) { %>
 			<div class="dropdown">
@@ -51,77 +53,8 @@
 	</div>	
 	<%- include ("./chatpage.ejs") %>
     <%- include ("./footer.ejs") %>
-
-	<script>
-		//댓글 입력 후에 enter버튼 활성화
-		$("#comment").on("keyup", () => {
-			var flag = true;
-			flag = $("#comment").val().length > 0 ? false : true;
-			$("#addbtn").attr("disabled", flag);
-		});
-		
-		
-		
-		$('#edit').click( (e) => {
-			var postNum = e.target.dataset.id;
-			var imageUrl = '';
-			if(document.querySelector("#imageUrl")) {
-				imageUrl = document.querySelector("#imageUrl").src;
-				console.log(imageUrl);
-			}
-			
-			$.ajax({
-				method : 'POST',
-				url : '/edit/' + postNum,
-				data : { title: $('#title')[0].innerText
-						, contents: $('#contents')[0].innerText
-						, imageUrl: imageUrl
-					   }
-			}).done( (results) => {
-				console.log('call view');
-				// Contents 영역 제거
-				$('#showpostid').children().remove();
-				// Contents 영역 교체
-				$('#showpostid').html(results);
-				console.log(results);
-			}).fail( (xhr, textStatus, errThrown) => {
-				console.log("서버에서 보내온 오류 정보 : ", xhr, textStatus, errThrown);
-			});
-		})
-		
-		$('#delete').click( (e) => {
-			if(confirm('정말 게시물을 삭제하시겠습니까?')) {
-				var postNum = e.target.dataset.id;
-				$.ajax({
-					method : 'DELETE',
-					url : '/process/delete',
-					data : { _id : postNum }
-				}).done( (results) => {
-					location.href = '/listpost';
-				}).fail( (xhr, textStatus, errThrown) => {
-					console.log("서버에서 보내온 오류 정보 : ", xhr, textStatus, errThrown);
-				});
-			}
-		})
-		
-		function addComment() {
-			if($("#comment").val().length > 0) {
-				var formData = $('#addcomment').serializeArray(); // serialize 사용 -- 객체 형식으로
-				$.ajax({
-					method: "POST",
-					url: "/process/addcomment",
-					data: {id: formData[2].value, contents: formData[0].value, writer: formData[1].value}
-				}).done( (results) => {
-					console.log('call view');
-					// Contents 영역 제거
-					$('.comments').children().remove();
-					// Contents 영역 교체
-					$('.comments').html(results);
-				}).fail( (xhr, textStatus, errThrown) => {
-					console.log("서버에서 보내온 오류 정보 : ", xhr, textStatus, errThrown);
-				});
-			}
-		}
-	</script>
+	
+	<script src='/public/js/showpost.js'></script>
+	
   </body>
 </html>
