--- a/views/showpost.ejs
+++ b/views/showpost.ejs
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 	<link rel="stylesheet" href="/public/css/chat.css"/>
-	<link rel="stylesheet" href="/public/css/comment.css"/>
+	<link rel="stylesheet" href="/public/css/showpost.css"/>
     <title>글 조회</title>
   </head>
   <body>
